--- a/references.bib
+++ b/references.bib
@@ -164,3 +164,90 @@ Publisher: Multidisciplinary Digital Publishing Institute},
 	file = {ScienceDirect Snapshot:D\:\\Zotero\\storage\\8PIR2GSZ\\S235293852300023X.html:text/html},
 }
 
+@incollection{gokce_wetland_2019,
+	title = {Wetland {Monitoring} and {Mapping} {Using} {Synthetic} {Aperture} {Radar}},
+	isbn = {978-1-78985-013-0 978-1-78985-014-7},
+	url = {https://www.intechopen.com/books/wetlands-management-assessing-risk-and-sustainable-solutions/wetland-monitoring-and-mapping-using-synthetic-aperture-radar},
+	abstract = {Wetlands are critical for ensuring healthy aquatic systems, preventing soil erosion, and securing groundwater reservoirs. Also, they provide habitat for many animal and plant species. Thus, the continuous monitoring and mapping of wetlands is necessary for observing effects of climate change and ensuring a healthy environment. Synthetic Aperture Radar (SAR) remote sensing satellites are active remote sensing instruments essential for monitoring wetlands, given the possibility to bypass the cloud-sensitive optical instruments and obtain satellite imagery day and night. Therefore, the purpose of this chapter is to provide an overview of the basic concepts of SAR remote sensing technology and its applications for wetland monitoring and mapping. Emphasis is given to SAR systems with full and compact polarimetric SAR capabilities. Brief discussions on the latest stateof-the-art wetland applications using SAR imagery are presented. Also, we summarize the current trends in wetland monitoring and mapping using SAR imagery. This chapter provides a good introduction to interested readers with limited background in SAR technology and its possible wetland applications.},
+	language = {en},
+	urldate = {2023-03-23},
+	booktitle = {Wetlands {Management} - {Assessing} {Risk} and {Sustainable} {Solutions}},
+	publisher = {IntechOpen},
+	author = {Dabboor, Mohammed and Brisco, Brian},
+	editor = {Gökçe, Didem},
+	month = jan,
+	year = {2019},
+	doi = {10.5772/intechopen.80224},
+	file = {Dabboor 和 Brisco - 2019 - Wetland Monitoring and Mapping Using Synthetic Ape.pdf:D\:\\Zotero\\storage\\3XCKJB2W\\Dabboor 和 Brisco - 2019 - Wetland Monitoring and Mapping Using Synthetic Ape.pdf:application/pdf},
+}
+
+
+@incollection{gokce_wetland_2019,
+	title = {Wetland {Monitoring} and {Mapping} {Using} {Synthetic} {Aperture} {Radar}},
+	isbn = {978-1-78985-013-0 978-1-78985-014-7},
+	url = {https://www.intechopen.com/books/wetlands-management-assessing-risk-and-sustainable-solutions/wetland-monitoring-and-mapping-using-synthetic-aperture-radar},
+	abstract = {Wetlands are critical for ensuring healthy aquatic systems, preventing soil erosion, and securing groundwater reservoirs. Also, they provide habitat for many animal and plant species. Thus, the continuous monitoring and mapping of wetlands is necessary for observing effects of climate change and ensuring a healthy environment. Synthetic Aperture Radar (SAR) remote sensing satellites are active remote sensing instruments essential for monitoring wetlands, given the possibility to bypass the cloud-sensitive optical instruments and obtain satellite imagery day and night. Therefore, the purpose of this chapter is to provide an overview of the basic concepts of SAR remote sensing technology and its applications for wetland monitoring and mapping. Emphasis is given to SAR systems with full and compact polarimetric SAR capabilities. Brief discussions on the latest stateof-the-art wetland applications using SAR imagery are presented. Also, we summarize the current trends in wetland monitoring and mapping using SAR imagery. This chapter provides a good introduction to interested readers with limited background in SAR technology and its possible wetland applications.},
+	language = {en},
+	urldate = {2023-03-23},
+	booktitle = {Wetlands {Management} - {Assessing} {Risk} and {Sustainable} {Solutions}},
+	publisher = {IntechOpen},
+	author = {Dabboor, Mohammed and Brisco, Brian},
+	editor = {Gökçe, Didem},
+	month = jan,
+	year = {2019},
+	doi = {10.5772/intechopen.80224},
+	file = {Dabboor 和 Brisco - 2019 - Wetland Monitoring and Mapping Using Synthetic Ape.pdf:D\:\\Zotero\\storage\\3XCKJB2W\\Dabboor 和 Brisco - 2019 - Wetland Monitoring and Mapping Using Synthetic Ape.pdf:application/pdf},
+}
+
+
+@article{dubeau_mapping_2017,
+	title = {Mapping the {Dabus} {Wetlands}, {Ethiopia}, {Using} {Random} {Forest} {Classification} of {Landsat}, {PALSAR} and {Topographic} {Data}},
+	volume = {9},
+	issn = {2072-4292},
+	url = {https://www.mdpi.com/2072-4292/9/10/1056},
+	doi = {10.3390/rs9101056},
+	abstract = {The Dabus Wetland complex in the highlands of Ethiopia is within the headwaters of the Nile Basin and is home to significant ecological communities and rare or endangered species. Its many interrelated wetland types undergo seasonal and longer-term changes due to weather and climate variations as well as anthropogenic land use such as grazing and burning. Mapping and monitoring of these wetlands has not been previously undertaken due primarily to their relative isolation and lack of resources. This study investigated the potential of remote sensing based classification for mapping the primary vegetation groups in the Dabus Wetlands using a combination of dry and wet season data, including optical (Landsat spectral bands and derived vegetation and wetness indices), radar (ALOS PALSAR L-band backscatter), and elevation (SRTM derived DEM and other terrain metrics) as inputs to the non-parametric Random Forest (RF) classifier. Eight wetland types and three terrestrial/upland classes were mapped using field samples of observed plant community composition and structure groupings as reference information. Various tests to compare results using different RF input parameters and data types were conducted. A combination of multispectral optical, radar and topographic variables provided the best overall classification accuracy, 94.4\% and 92.9\% for the dry and wet season, respectively. Spectral and topographic data (radar data excluded) performed nearly as well, while accuracies using only radar and topographic data were 82–89\%. Relatively homogeneous classes such as Papyrus Swamps, Forested Wetland, and Wet Meadow yielded the highest accuracies while spatially complex classes such as Emergent Marsh were more difficult to accurately classify. The methods and results presented in this paper can serve as a basis for development of long-term mapping and monitoring of these and other non-forested wetlands in Ethiopia and other similar environmental settings.},
+	number = {10},
+	journal = {Remote Sensing},
+	author = {Dubeau, Pierre and King, Douglas J. and Unbushe, Dikaso Gojamme and Rebelo, Lisa-Maria},
+	year = {2017},
+}
+
+@article{jahncke_mapping_2018,
+	title = {Mapping wetlands in {Nova} {Scotia} with multi-beam {RADARSAT}-2 {Polarimetric} {SAR}, optical satellite imagery, and {Lidar} data},
+	volume = {68},
+	issn = {1569-8432},
+	url = {https://www.sciencedirect.com/science/article/pii/S0303243418300801},
+	doi = {10.1016/j.jag.2018.01.012},
+	abstract = {Wetland maps currently in use by the Province of Nova Scotia, namely the Department of Natural Resources (DNR) wetland inventory map and the swamp wetland classes of the DNR forest map, need to be updated. In this study, wetlands were mapped in an area southwest of Halifax, Nova Scotia by classifying a combination of multi-date and multi-beam RADARSAT-2 C-band polarimetric SAR (polSAR) images with spring Lidar, and fall QuickBird optical data using the Random Forests (RF) classifier. The resulting map has five wetland classes (open-water/marsh complex, open bog, open fen, shrub/treed fen/bog, swamp), plus lakes and various upland classes. Its accuracy was assessed using data from 156 GPS wetland sites collected in 2012 and compared to the one obtained with the current wetland map of Nova Scotia. The best overall classification was obtained using a combination of Lidar, RADARSAT-2 HH, HV, VH, VV intensity with polarimetric variables, and QuickBird multispectral (89.2\%). The classified image was compared to GPS validation sites to assess the mapping accuracy of the wetlands. It was first done considering a group consisting of all wetland classes including lakes. This showed that only 69.9\% of the wetland sites were correctly identified when only the QuickBird classified image was used in the classification. With the addition of variables derived from lidar, the number of correctly identified wetlands increased to 88.5\%. The accuracy remained the same with the addition of RADARSAT-2 (88.5\%). When we tested the accuracy for identifying wetland classes (e.g. marsh complex vs. open bog) instead of grouped wetlands, the resulting wetland map performed best with either QuickBird and Lidar, or QuickBird, Lidar, and RADARSAT-2 (66\%). The Province of Nova Scotia’s current wetland inventory and its associated wetland classes (aerial-photo interpreted) were also assessed against the GPS wetland sites. This provincial inventory correctly identified 62.2\% of the grouped wetlands and only 18.6\% of the wetland classes. The current inventory’s poor performance demonstrates the value of incorporating a combination of new data sources into the provincial wetland mapping.},
+	language = {en},
+	urldate = {2023-03-23},
+	journal = {International Journal of Applied Earth Observation and Geoinformation},
+	author = {Jahncke, Raymond and Leblon, Brigitte and Bush, Peter and LaRocque, Armand},
+	month = jun,
+	year = {2018},
+	keywords = {Lidar, Polarimetric SAR, QuickBird, Random forests classification, Wetlands},
+	pages = {139--156},
+	file = {ScienceDirect Full Text PDF:D\:\\Zotero\\storage\\VWWX4RUI\\Jahncke 等 - 2018 - Mapping wetlands in Nova Scotia with multi-beam RA.pdf:application/pdf;ScienceDirect Snapshot:D\:\\Zotero\\storage\\KJ3HN2DH\\S0303243418300801.html:text/html},
+}
+
+
+@article{millard_wetland_2013,
+	title = {Wetland mapping with {LiDAR} derivatives, {SAR} polarimetric decompositions, and {LiDAR}–{SAR} fusion using a random forest classifier},
+	volume = {39},
+	issn = {0703-8992},
+	url = {https://doi.org/10.5589/m13-038},
+	doi = {10.5589/m13-038},
+	abstract = {In this paper, we assess the use of Random Forest (RF) for mapping land cover classes within Mer Bleue bog, a large northern peatland in southeastern Ontario near Ottawa, Canada, using Synthetic Aperture Radar (SAR) and airborne Light Detection and Ranging (LiDAR). Not only has RF been shown to improve classification accuracies over more traditional classifiers, but it also provides useful information on the statistical importance of individual input image bands for land cover classification. Our specific objectives in this study were to: (i) assess the robustness of a RF approach to northern peatland classification; (ii) examine variable importance resulting from the RF classifications to identify which imagery types, derivatives, and analysis scales are most useful for mapping different classes of northern peatlands; (iii) assess if fusion of different LiDAR and SAR variables can improve classification accuracies at Mer Bleue; and (iv) assess physical interpretability of the multisensor image types and derivatives with respect to biophysical attributes associated with peatland classes. Our results show that the fusion of SAR with LiDAR imagery and derivatives at this study site did not provide additional classification accuracy over the use of LiDAR derivatives alone. Nevertheless, the RF-based approach presented here has strong potential to improve mapping and imagery classification of wetlands and may also help researchers and practitioners improve information extraction and land cover classification in other application areas benefitting from large volumes of multi-sensor imagery.},
+	number = {4},
+	urldate = {2023-03-23},
+	journal = {Canadian Journal of Remote Sensing},
+	author = {Millard, Koreen and Richardson, Murray},
+	month = oct,
+	year = {2013},
+	note = {Publisher: Taylor \& Francis
+\_eprint: https://doi.org/10.5589/m13-038},
+	pages = {290--307},
+	file = {Full Text PDF:D\:\\Zotero\\storage\\XK7MW96R\\Millard 和 Richardson - 2013 - Wetland mapping with LiDAR derivatives, SAR polari.pdf:application/pdf},
+}
+
